[package]
authors.workspace = true
categories        = ["development-tools"]
description       = "Pretty error reporting library"
documentation     = "https://rustdocs.rome.tools/rome_diagnostics/index.html"
edition.workspace = true
license.workspace = true
name              = "rome_diagnostics"
version           = "0.0.1"

[[example]]
name = "cli"
test = true

[[example]]
name = "fs"
test = true

[[example]]
name = "lint"
test = true

[[example]]
name = "serde"
test = true

[dependencies]
backtrace                   = "0.3.66"
bitflags                    = "1.3.2"
bpaf                        = { workspace = true }
pico-args                   = "0.5.0"
rome_console                = { workspace = true, features = ["serde_markup"] }
rome_diagnostics_categories = { workspace = true, features = ["serde"] }
rome_diagnostics_macros     = { workspace = true }
rome_rowan                  = { workspace = true }
rome_text_edit              = { workspace = true }
rome_text_size              = { workspace = true }
schemars                    = { version = "0.8.10", optional = true }
serde                       = { version = "1.0.133", features = ["derive"] }
termcolor                   = "1.1.2"
unicode-width               = "0.1.9"

[features]
schema = ["schemars", "rome_text_edit/schemars", "rome_diagnostics_categories/schemars"]

[dev-dependencies]
serde_json = "1.0.74"
trybuild   = "1.0"
