[package]
authors.workspace    = true
description          = "Diagnostic categories for rome_diagnostics. It exposes a macro that emits compile-time errors for extranous categories."
documentation        = "https://rustdocs.rome.tools/rome_diagnostics/index.html"
edition.workspace    = true
license.workspace    = true
name                 = "rome_diagnostics_categories"
repository.workspace = true
version              = "0.0.1"

[dependencies]
schemars = { workspace = true, optional = true }
serde    = { workspace = true, optional = true }

[build-dependencies]
quote = "1.0.14"
