[package]
authors.workspace    = true
description          = "Diagnostic categories for rome_diagnostics. It exposes a macro that emits compile-time errors for extranous categories."
documentation        = "https://docs.rs/rome_diagnostics"
edition.workspace    = true
license.workspace    = true
name                 = "rome_diagnostics_categories"
repository.workspace = true
version              = "0.2.0"

[dependencies]
schemars = { workspace = true, optional = true }
serde    = { workspace = true, optional = true }

[build-dependencies]
quote = "1.0.14"
