[package]
name = "rome_diagnostics_macros"
version = "0.0.1"
authors = ["Rome Tools Developers and Contributors"]
license = "MIT"
edition = "2021"
repository = "https://github.com/rome/tools"
documentation = "https://rustdocs.rome.tools/rome_diagnostics/index.html"
description = "A Macro to make a struct type a Rome diagnostic."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = "1.0.85"
quote = "1.0.14"
proc-macro-error = { version = "1.0.4", default-features = false }
