[package]
authors.workspace    = true
description          = "A Macro to make a struct type a Rome diagnostic."
documentation        = "https://rustdocs.rome.tools/rome_diagnostics/index.html"
edition.workspace    = true
license.workspace    = true
name                 = "rome_diagnostics_macros"
repository.workspace = true
version              = "0.0.1"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro2      = "1.0.36"
quote            = "1.0.14"
syn              = "1.0.85"
