[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "rome_flags"
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
