[package]
name = "rome_formatter"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan = { path = "../rome_rowan" }
tracing = { workspace = true }
serde = { version = "1.0.136", features = ["derive"], optional = true }
cfg-if = "1.0.0"
schemars = { version = "0.8.10", optional = true }
rustc-hash = { workspace = true }
countme = { workspace = true }
drop_bomb = "0.1.5"
indexmap = { workspace = true }
unicode-width = "0.1.9"

[dev-dependencies]
rome_js_parser = { path = "../rome_js_parser"}
rome_js_syntax = { path = "../rome_js_syntax" }
rome_diagnostics = { path = "../rome_diagnostics" }

[features]
serde = ["dep:serde", "schemars", "rome_rowan/serde"]
