[package]
name = "rome_formatter_test"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rome_parser = { path = "../rome_parser" }
rome_diagnostics = { workspace = true }
rome_formatter = { workspace = true }
rome_rowan = { workspace = true }
rome_console = { workspace = true }
rome_fs = { path = "../rome_fs" }
rome_service = { path = "../rome_service" }
similar = "2.1.0"
similar-asserts = "1.2.0"
insta = { workspace = true, features = ["glob"] }

[dev-dependencies]
