[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "rome_formatter_test"
repository.workspace = true
version              = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta            = { workspace = true, features = ["glob"] }
rome_console     = { workspace = true }
rome_diagnostics = { workspace = true }
rome_formatter   = { workspace = true }
rome_fs          = { workspace = true }
rome_parser      = { workspace = true }
rome_rowan       = { workspace = true }
rome_service     = { workspace = true }
serde            = { version = "1", features = ["derive"] }
serde_json       = { workspace = true }
similar          = "2.1.0"
similar-asserts  = "1.2.0"

[dev-dependencies]
