[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "rome_fs"
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam        = "0.8.1"
indexmap         = { workspace = true }
parking_lot      = { version = "0.12.0", features = ["arc_lock"] }
rayon            = "1.5.1"
rome_console     = { workspace = true }
rome_diagnostics = { workspace = true }
schemars         = { version = "0.8.10", optional = true }
serde            = { version = "1.0.136", features = ["derive"], optional = true }
tracing          = { workspace = true }

[features]
serde = ["dep:serde", "schemars", "rome_diagnostics/schema"]
