[package]
name = "rome_js_analyze"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rome_analyze = { path = "../rome_analyze" }
rome_control_flow = { path = "../rome_control_flow" }
rome_rowan = { workspace = true }
rome_js_semantic = { path = "../rome_js_semantic" }
rome_js_syntax = { path = "../rome_js_syntax" }
rome_js_factory = { path = "../rome_js_factory" }
rome_js_unicode_table = { path = "../rome_js_unicode_table" }
rome_json_syntax = { path = "../rome_json_syntax" }
rome_json_factory = { path = "../rome_json_factory" }
rome_console = { workspace = true }
rome_diagnostics = { workspace = true }
rome_deserialize = { workspace = true }
rome_aria = { path = "../rome_aria" }
roaring = "0.10.1"
rustc-hash = { workspace = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.74", features = ["raw_value"] }
lazy_static = { workspace = true }
natord = "1.0.9"

[dev-dependencies]
tests_macros = { path = "../tests_macros" }
rome_text_edit = { path = "../rome_text_edit" }
rome_js_parser = { path = "../rome_js_parser", features = ["tests"] }
insta = { workspace = true, features = ["glob"] }
countme = { workspace = true, features = ["enable"] }
similar = "2.1.0"
json_comments = "0.2.1"
