[package]
name = "rome_js_factory"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Utilities to create JavaScript AST for rome_js_parser"
repository.workspace = true
documentation = "https://rustdocs.rome.tools/rome_js_factory/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan = { version = "0.0.1",path = "../rome_rowan" }
rome_js_syntax = { version = "0.0.2",path = "../rome_js_syntax" }
