[package]
authors.workspace    = true
description          = "Utilities to create JavaScript AST for rome_js_parser"
documentation        = "https://docs.rs/rome_js_factory"
edition.workspace    = true
license.workspace    = true
name                 = "rome_js_factory"
repository.workspace = true
version              = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_js_syntax = { workspace = true }
rome_rowan     = { workspace = true }
