[package]
name = "rome_js_formatter"
version = "0.0.0"
edition = "2021"
authors = ["Rome Tools Developers and Contributors"]
repository = "https://github.com/rome/tools"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
rome_js_syntax = { path = "../rome_js_syntax" }
rome_js_factory = { path = "../rome_js_factory" }
rome_formatter = { path = "../rome_formatter" }
rome_rowan = { path = "../rome_rowan" }
rome_text_size = { path = "../rome_text_size"}
rome_diagnostics_categories = { path = "../rome_diagnostics_categories"}
tracing = { workspace = true }
unicode-width = "0.1.9"
serde = { version = "1.0.136", features = ["derive"], optional = true }
schemars = { version = "0.8.10", optional = true }

[dev-dependencies]
rome_parser = { path = "../rome_parser" }
rome_formatter_test = {path = "../rome_formatter_test"}
rome_console = { path = "../rome_console" }
rome_fs = { path = "../rome_fs" }
rome_service = { path = "../rome_service" }
rome_js_parser = { path = "../rome_js_parser" }
rome_js_factory = { path = "../rome_js_factory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tests_macros = { path = "../tests_macros" }
insta = { version="1.18.2", features = ["glob"] }
rome_diagnostics = { path = "../rome_diagnostics" }
countme = { workspace = true, features = ["enable"] }
similar = "2.1.0"
similar-asserts = "1.2.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
iai = "0.1.1"

[[bench]]
name = "iai"
harness = false

[features]
serde = ["dep:serde", "schemars"]
