[package]
name = "rome_js_formatter"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
documentation = "https://rustdocs.rome.tools/rome_js_formatter/index.html"
description = "Rome's JavaScript formatter"
categories = [
	"development-tools"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
rome_js_syntax = { version = "0.0.2", path = "../rome_js_syntax" }
rome_json_syntax = { workspace = true }
rome_js_factory = { version = "0.0.2", path = "../rome_js_factory" }
rome_formatter = { workspace = true }
rome_rowan = { workspace = true }
rome_text_size = { workspace = true }
rome_diagnostics_categories = { workspace = true }
rome_deserialize = { workspace = true }
tracing = { workspace = true }
unicode-width = "0.1.9"
serde = { version = "1.0.136", features = ["derive"], optional = true }
schemars = { version = "0.8.10", optional = true }

[dev-dependencies]
rome_parser = { path = "../rome_parser" }
rome_formatter_test = { path = "../rome_formatter_test" }
rome_fs = { workspace = true }
rome_js_parser = { workspace = true }
rome_js_factory = { path = "../rome_js_factory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tests_macros = { path = "../tests_macros" }
insta = { workspace = true, features = ["glob"] }
rome_diagnostics = { workspace = true }
countme = { workspace = true, features = ["enable"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
iai = "0.1.1"

[[bench]]
name = "iai"
harness = false

[features]
serde = ["dep:serde", "schemars"]

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true
