[package]
authors.workspace    = true
categories           = ["development-tools"]
description          = "Rome's JavaScript formatter"
documentation        = "https://rustdocs.rome.tools/rome_js_formatter/index.html"
edition.workspace    = true
license.workspace    = true
name                 = "rome_js_formatter"
repository.workspace = true
version              = "0.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if                      = "1.0.0"
rome_deserialize            = { workspace = true }
rome_diagnostics_categories = { workspace = true }
rome_formatter              = { workspace = true }
rome_js_factory             = { workspace = true }
rome_js_syntax              = { workspace = true }
rome_json_syntax            = { workspace = true }
rome_rowan                  = { workspace = true }
rome_text_size              = { workspace = true }
schemars                    = { workspace = true, optional = true }
serde                       = { workspace = true, features = ["derive"], optional = true }
tracing                     = { workspace = true }
unicode-width               = "0.1.9"

[dev-dependencies]
countme             = { workspace = true, features = ["enable"] }
iai                 = "0.1.1"
insta               = { workspace = true, features = ["glob"] }
quickcheck          = { workspace = true }
quickcheck_macros   = { workspace = true }
rome_diagnostics    = { workspace = true }
rome_formatter_test = { workspace = true }
rome_fs             = { workspace = true }
rome_js_factory     = { workspace = true }
rome_js_parser      = { workspace = true }
rome_parser         = { workspace = true }
serde               = { version = "1", features = ["derive"] }
serde_json          = { workspace = true }
tests_macros        = { workspace = true }

[[bench]]
harness = false
name    = "iai"

[features]
serde = ["dep:serde", "schemars"]

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true
