[package]
edition = "2021"
name = "rome_js_lexer"
version = "0.2.0"
authors = ["RSLint developers"]
description = "An extremely fast ECMAScript lexer made for the rslint project"
license = "MIT"
repository = "https://github.com/rslint/rslint"

[dependencies]
rome_diagnostics = { path = "../rome_diagnostics" }
rome_js_syntax = { path = "../rome_js_syntax" }
atty = { version = "0.2.14", optional = true }
ansi_term = { version = "0.12.1", optional = true }
bitflags = "1.3.2"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
highlight = ["atty", "ansi_term"]

[package.metadata.docs.rs]
features = ["highlight"]
